[EATON-605] Fix for IE11 item-wrapping (Adjust flex-basis across browsers)

--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/ttil-list/css/ttil-list.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/ttil-list/css/ttil-list.css
@@ -190,8 +190,8 @@
   .eaton-ttil-image-list__image-headline { text-align: center; } }
 
 @media screen and (min-width: 992px) { .eaton-ttil-image-list__container { display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-flex-wrap: wrap; -ms-flex-wrap: wrap; flex-wrap: wrap; }
-  .eaton-ttil-image-list__item { -webkit-flex-basis: 33.33%; -ms-flex-preferred-size: 33.33%; flex-basis: 33.33%; margin-bottom: 60px; }
-  .eaton-grid-control .eaton-ttil-image-list__item { -webkit-flex-basis: 50%; -ms-flex-preferred-size: 50%; flex-basis: 50%; }
+  .eaton-ttil-image-list__item { -webkit-flex-basis: 31%; -ms-flex-preferred-size: 31%; flex-basis: 31%; margin-bottom: 60px; }
+  .eaton-grid-control .eaton-ttil-image-list__item { -webkit-flex-basis: 50%; -ms-flex-preferred-size: 50%; flex-basis: 50%; padding: 0; }
   .eaton-ttil-image-list__image-headline { text-align: left; } }
 
 .eaton-category-hero { position: relative; display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-box-align: center; -webkit-align-items: center; -ms-flex-align: center; align-items: center; }
